Ticket #5476: Fix width of columns header and align of translators

--- a/app/assets/sass/_project.scss
+++ b/app/assets/sass/_project.scss
@@ -1,6 +1,7 @@
 $breakpoint: 1000px;
 $column-width: 300px;
 $header-height: 7vh;
+$header--max-width: 505px;
 
 .project .columns {
   color: $firefly80;
@@ -65,6 +66,8 @@ header.title {
     .wrap {
      max-width: 1262px;
      margin: auto;
+     display: flex;
+     justify-content: space-between;
     }
   }
 
@@ -78,8 +81,7 @@ header.title {
   }
 
   .project--translators {
-    float: right;
-    margin: 1em;
+    align-self: flex-end;
     em {
       line-height: 1.0;
     }
@@ -149,10 +151,11 @@ header.title {
       // border: 10px solid green;
       @include layout--flex-item-scrolling;
       margin: 8px 0px;
+      padding: 0px 8px;
 
       .embeds {
         padding: 1px 0 100px;
-        margin: 0px 8px;
+        margin: 0px;
       }
     }
   }
@@ -175,9 +178,10 @@ header.title {
     // text-align: center;
   }
   @media(min-width: $breakpoint) {
-    margin: 0px 8px;
+    margin: 0px auto;
     height: 50px;
     overflow: hidden;
+    max-width: $header--max-width;
   }
 }
 
